# DigitalAnalogComputer

./: CMakeLists.txt  README.md  instructionset.txt  run.cir  run.cir.prn  run.sh
analog/: template.cir
build_verilator/: Vcounter  Vcounter.mk  Vcounter__ALL.d  Vcounter__Syms.cpp  Vcounter__Syms.h  Vcounter___024root.h  Vcounter___024root__0.cpp  Vcounter___024root__0__Slow.cpp  Vcounter___024root__Slow.cpp  Vcounter__ver.d  main.d  xyce_wrapper.d
digital/: alu.sv  counter.sv  cpu.sv  instruction_memory.sv  parameters.sv  port_ram.sv
src/: main.cpp  xyce_wrapper.cpp  xyce_wrapper.h
